# glasgow-subgraph-solver

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENCE  README.md  clique.cc  clique.hh  common.mk  configuration.hh  create_random_graph.cc  dimacs.cc  dimacs.hh  fixed_bit_set.cc  fixed_bit_set.hh  glasgow_clique_solver.cc  glasgow_clique_solver.mk  glasgow_subgraph_solver.cc  glasgow_subgraph_solver.mk  graph.cc  graph.hh  graph_file_error.cc  graph_file_error.hh  homomorphism.cc  homomorphism.hh  lad.cc  lad.hh  main.mk  params.cc  params.hh  random.mk  restarts.cc  restarts.hh  result.cc  result.hh  run-tests.bash  script.jl  sequential.cc  sequential.hh  (+11 more)
.github/workflows/: cmake.yml
big-to-sub-tests/: MCB_1.big  MCB_2.big  bigraph.sh  buses_P.big  buses_T.big  out.xml  petri_P.big  petri_T.big  tests.txt
big-to-sub-tests/big/: P0.big  P1.big  P10.big  P11.big  P12.big  P13.big  P14.big  P15.big  P16.big  P17.big  P18.big  P19.big  P2.big  P20.big  P21.big  P22.big  P23.big  P24.big  P25.big  P26.big  P27.big  P28.big  P29.big  P3.big  P30.big  P31.big  P32.big  P33.big  P34.big  P36.big  P37.big  P38.big  P39.big  P4.big  P5.big  P6.big  P7.big  P8.big  P9.big  PR.big  (+29 more)
dev_docs/: architecture.md  preprocessor-refactor.md  proof-logging.md
formats/: csv.cc  csv.hh  dimacs.cc  dimacs.hh  graph_file_error.cc  input_graph.cc  input_graph.hh  labels_map.cc  labels_map.hh  lad.cc  lad.hh  read_file_format.cc  read_file_format.hh
gap/: findDPfactorsOfGraphs.g
gss/: CMakeLists.txt  cheap_all_different.cc  cheap_all_different.hh  clique.cc  clique.hh  clique_test.cc  common_subgraph.cc  common_subgraph.hh  common_subgraph_test.cc  configuration.cc  configuration.hh  create_random_graph.cc  extra_shapes_test.cc  graph_traits.cc  graph_traits.hh  homomorphism.cc  homomorphism.hh  homomorphism_domain.cc  homomorphism_domain.hh  homomorphism_matrix_test.cc  homomorphism_model.cc  homomorphism_model.hh  homomorphism_searcher.cc  homomorphism_searcher.hh  homomorphism_test.cc  homomorphism_traits.cc  homomorphism_traits.hh  lackey.cc  lackey.hh  loooong.hh  loooong_test.cc  proof.cc  proof.hh  proof_options.hh  random_homomorphism_test.cc  restarts.cc  restarts.hh  restarts_test.cc  sip_decomposer.cc  sip_decomposer.hh  (+17 more)
gss/formats/: csv.cc  csv.hh  dimacs.cc  dimacs.hh  flat.cc  flat.hh  formats_test.cc  graph_file_error.cc  graph_file_error.hh  input_graph.cc  input_graph.hh  lad.cc  lad.hh  read_file_format.cc  read_file_format.hh  vfmcs.cc  vfmcs.hh
gss/innards/: automorphisms.cc  automorphisms.hh  cheap_all_different.cc  cheap_all_different.hh  clique_size_constraints.cc  clique_size_constraints.hh  graph_traits.cc  graph_traits.hh  homomorphism_domain.cc  homomorphism_domain.hh  homomorphism_model.cc  homomorphism_model.hh  homomorphism_proofs.cc  homomorphism_proofs.hh  homomorphism_searcher.cc  homomorphism_searcher.hh  homomorphism_traits.cc  homomorphism_traits.hh  lackey.cc  lackey.hh  processed_graphs_data.hh  proof-fwd.hh  proof.cc  proof.hh  solve_state.hh  supplemental_graphs.cc  supplemental_graphs.hh  svo_bitset.cc  svo_bitset.hh  svo_bitset_test.cc  symmetries.cc  symmetries.hh  symmetry_model.cc  symmetry_model.hh  thread_utils.cc  thread_utils.hh  verify.cc  verify.hh  watches.cc  watches.hh
gss/utils/: cout_formatting.cc  cout_formatting.hh  hashing_utils.hh  json_utils.cc  json_utils.hh  vertex_name_map.hh
small-graphs/: README.md  small-graphs.txt
src/: CMakeLists.txt  cheap_all_different.cc  cheap_all_different.hh  clique.cc  clique.hh  common.mk  common_subgraph.cc  common_subgraph.hh  config.hh  configuration.cc  configuration.hh  convert_to_lad.cc  create_random_graph.cc  create_random_graph.mk  fixed_bit_set.cc  fixed_bit_set.hh  glasgow_bigraph_lib.cc  glasgow_bigraph_lib.hh  glasgow_bigraph_lib.mk  glasgow_bigraph_lib_static.mk  glasgow_bigraph_solver.cc  glasgow_bigraph_solver.mk  glasgow_clique_solver.cc  glasgow_clique_solver.mk  glasgow_common_bigraph_solver  glasgow_common_bigraph_solver.cc  glasgow_common_bigraph_solver.mk  glasgow_common_subgraph_solver.cc  glasgow_common_subgraph_solver.mk  glasgow_subgraph_solver.cc  glasgow_subgraph_solver.mk  graph_traits.cc  graph_traits.hh  homomorphism.cc  homomorphism.hh  homomorphism_domain.cc  homomorphism_domain.hh  homomorphism_model.cc  homomorphism_model.hh  homomorphism_searcher.cc  (+33 more)
src/formats/: bigraph-b.cc  bigraph.cc  bigraph.hh  common_bigraph.cc  common_bigraph.hh  csv.cc  csv.hh  dimacs.cc  graph_file_error.cc  graph_file_error.hh  input_graph.cc  input_graph.hh  lad.cc  lad.hh  read_file_format.cc  vfmcs.cc  vfmcs.hh
test-instances/: c3.csv  c3c2.csv  clique.clq  k33.lad  k4.lad  large  li_exact_path_pattern.csv  li_exact_path_target.csv  longtrident.csv  loop_target.lad  path4.lad  path5.lad  proof_metrics.bash  random_proof_sweep.bash  small  star5.lad  triangle.lad  trident.csv  verify_cake_pipeline.bash  verify_proof.bash
